[workspace]
members = ["exercises/*", "runner"]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
