[package]
name = "async-book-exercises"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Havens<mail@jhavens.tech>"]
description = "My personal Rust async programming tutorial based on the Rust Async Book"
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"

[[bin]]
name = "async-book-exercises"
path = "src/main.rs"
