[package]
name = "exercise-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }