[package]
name = "chapter02"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }

[lib]
name = "chapter02"
path = "lib.rs"

[[bin]]
name = "ex01_future_trait"
path = "ex01_future_trait.rs"

[[bin]]
name = "ex02_custom_executor"
path = "ex02_custom_executor.rs"